---------------------------------------------

- v1.0.1020                                 -
---------------------------------------------
- 2020-06-28                                -
---------------------------------------------
.: WSM: Task: Update Home page (WSM-147)
.: WSM: Task: Update Mobile Size (WSM-120)
.: WSM: Task: Remove modal outlet from project (WSM-151)

---------------------------------------------
- 2020-06-24                                -
---------------------------------------------
.: WSM: Task: Change angular social login package to support Angular 9 Ivy (WSM-139)
.: WSM: Task: CLONE - Change URL from "shop" to "page" (WSM-144)

---------------------------------------------
- 2020-06-23                                -
---------------------------------------------
.: WSM: Task: Preview information banner scroll width issue (WSM-112)

---------------------------------------------
- 2020-06-22                                -
---------------------------------------------
.: WSM: Task: Module lazy load (WSM-135)

---------------------------------------------
- 2020-06-21                                -
---------------------------------------------
.: WSM: Story: Data collect Module (WSM-120)

- v1.0.1011                                 -
---------------------------------------------
- 2020-06-14                                -
---------------------------------------------
.: WSM: Task: Action icon UI (WSM-131)
.: WSM: Task: Navigation is closed when click on add new category input (WSM-132)
.: WSM: Task: Add publish button in setting (WSM-118)
.: WSM: Task: Prevent empty page when page number more than 1 (WSM-111)
.: WSM: Task: Selected items mobile UI issue (WSM-110)
.: WSM: Task: Upload maximum length of items (WSM-134)

---------------------------------------------
- 2020-06-13                                -
---------------------------------------------
.: WSM: Task: Improvement: Item list image indicator (WSM-124)