@@ -6,7 +6,7 @@
       <h1 class="background__title mb-4">Merchant | Wonder Scale</h1>
       <p class="mb-4" style="color: #888; font-size: 1.5rem">A platform for merchants to manage and advertise your shop.</p>
       <p style="color: #888; font-size: 1rem; margin-bottom: 2rem">- We promise to provide the best services to our customers.</p>
-      <button class="btn btn-second" [routerLink]="[]" [queryParams]="{modal: 'login'}">Join us now!</button>
+      <button class="btn btn-second" (click)="navigateToJoinUs()">Join us now!</button>
     </div>
     <div class="col-lg-3 order-1 order-lg-12 mb-3">
       <img class="background__image" src="/assets/images/png/icon.png" alt="home icon" />
